# firstmodule

./: .pypirc  LICENSE.txt  pyproject.toml  setup.cfg
divide/: divide_by_three.py
src/divide/: __init__.py
src/firstmodule.egg-info/: PKG-INFO  SOURCES.txt
src/multiply/: multiply_by_three.py
tests/: test_divide_by_three.py
