[metadata]
name = firstmodule
version = 1.0.0
author = Sachin Singh
author_email = sachinsingh3198@gmail.com
description = A simple Python package
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/sachinsingh3107/firstmodule
project_urls =
    Bug Tracker = https://github.com/sachinsingh3107/firstmodule/-/issues
    repository = https://github.com/sachinsingh3107/firstmodule
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src